--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -13,7 +13,7 @@ html {
     .EasyMDEContainer {
       .CodeMirror {
         color: rgba(var(--colors-gray-500),var(--tw-text-opacity)) !important;
-        background-color: rgba(var(--colors-white), var(--tw-bg-opacity)) !important;
+        background-color: rgb(255 255 255/var(--tw-bg-opacity)) !important;
       }
     }
   }
